[package]
name = "d7sneakers"
version = "0.1.0"
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
edition = "2018"
description = "A simple file based 'datastore'/sneaker net based upon bp7 (bundle protocol version 7 draft)"
categories = ["command-line-utilities", "network-programming"]
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".travis.yml"]
repository    = "https://github.com/gh0st42/d7sneakers"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp7 = "0.8.1"
clap = "3.0.0-beta.2"
anyhow = "1.0.41"
log = "0.4.14"
pretty_env_logger = "0.4.0"
sanitize-filename-reader-friendly = "2.1.0"
rusqlite = "0.25.3"
walkdir = "2.3.2"
bitflags = "1.2.1"
#crossbeam-deque = "0.8.0"
